test/fail_compilation/fail18.d
// 7/25
// Internal error: ..\ztc\cgcod.c 1464

void main ()
{
 int x=3;
 int[] a = (&x)[];
}

